add option to skip client side uris (#382)